# AI_Document_Pipeline

./: .env.example  .gitattributes  .gitignore  ADE_DETAILED_REVIEW.md  ADE_HELPER_SCRIPTS_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_MIGRATION_GUIDE.md  AUTOMATIC_EMBEDDINGS_VERIFIED.md  AZURE_INSIGHTS_COMPARISON.md  BENCHMARKING_GUIDE.md  CLOUD_MIGRATION.md  CONTRACT_TESTING_IMPLEMENTATION.md  DATABASE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_PARALLEL.md  DEVCONTAINER_IMPLEMENTATION_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCLING_INTEGRATION_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_STATUS.md  Dockerfile  EMBEDDING_PRODUCTION_NOTES.md  END_TO_END_TESTING_GUIDE.md  EVENT_DRIVEN_ARCHITECTURE.md  EVENT_DRIVEN_PATTERNS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_PERFORMANCE_REPORT.md  GETTING_STARTED.md  GETTING_STARTED_CHECKLIST.md  HIGH_THROUGHPUT_FEATURES.md  HONEST_ARCHITECTURE_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SCALING.md  JUNIOR_DEV_GUIDE.md  LICENSE  LINTING_AND_IDE_SETUP.md  LLM_METADATA_EXTRACTION.md  LOCAL_TESTING_GUIDE.md  METADATA_EXTRACTION_FEATURE.md  MICROSERVICES_QUICK_START.md  (+80 more)
.codacy/: codacy.yaml
.devcontainer/: Dockerfile  README.md  docker-compose.yml  post-create.sh
api/: __init__.py  main.py  tasks.py
archive/: DELIVERY_SUMMARY.md  README.md
config/: metadata_schemas.yaml
examples/: ocr_usage.py  real_semantic_test.py  sample_usage.py  semantic_scoring_analysis.py  semantic_scoring_demo.py  test_example.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  TANSTACK_QUERY_GUIDE.md  index.html  (+7 more)
(+105 files in other folders)
