[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-document-pipeline"
version = "1.0.0"
description = "AI-powered document classification and organization using Ollama"
authors = [{name = "AI Document Pipeline", email = "info@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyPDF2>=3.0.1",
    "pypdf>=3.17.4",
    "pdfplumber>=0.10.3",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "pandas>=2.1.4",
    "python-magic>=0.4.27",
    "ollama>=0.1.6",
    "requests>=2.31.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.1",
    "loguru>=0.7.2",
]

[project.scripts]
doc-classify = "src.cli:main"

[tool.setuptools]
packages = ["src"]
py-modules = ["config"]
